--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,68 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Restaurant Apps</title>
-    <meta name="viewport" content="width=device-width">
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Restoku</title>
+  <meta name="viewport" content="width=device-width">
+</head>
+<body>
+  <a href="#content" class="skip-to-content">Skip to Content</a>
 
-   
-    <div class="appsbar">
-      <a href="#" class="logo">
-        <img src="./images/heros/logo.png" alt="Jawa Minang Logo">
-        Jawa Minang Restaurant
-      </a>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#">Favorite</a></li>
-          <li><a href="#">About Us</a></li>
-        </ul>
-        <div class="hamburger-menu" id="toggleDrawer">
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-      </nav>
-      <aside class="nav-drawer" id="navDrawer">
-        <ul>
-          <a href="#" class="logo">
-            <img src="./images/heros/logo.png" alt="Jawa Minang Logo">
-            <p>Jawa Minang Restaurant</p>
-          </a>
-          <li><a href="/">Home</a></li>
-          <li><a href="#">Favorite</a></li>
-          <li><a href="#">About Us</a></li>
-        </ul>
-      </aside>
-    </div>
-
-
-    <div class="hero">
-      <img src="./images/heros/hero-image_4.jpg" alt="Hero Image">
-      <div class="overlay">
-        <div class="text">Selamat Datang di Tempat Wisata Rasa Jawa Minang</div>
+  <div class="appsbar">
+    <a href="#" class="logo">
+      <img src="./images/heros/logo.png" alt="logo restoku">
+      Restoku
+    </a>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="#">Favorite</a></li>
+        <li><a href="#">About Us</a></li>
+      </ul>
+      <div class="hamburger-menu" id="toggleDrawer" tabindex="0" aria-label="Toggle Navigation Menu">
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
+    </nav>
+    <aside class="nav_drawer" id="navDrawer">
+      <ul>
+        <a href="#" class="logo">
+          <img src="./images/heros/logo.png" alt="logo restoku">
+          <p>Restoku</p>
+        </a>
+        <li><a href="/">Home</a></li>
+        <li><a href="#">Favorite</a></li>
+        <li><a href="#">About Us</a></li>
+      </ul>
+    </aside>
+  </div>
+  
+  <div class="hero">
+    <img src="./images/heros/hero-image_4.jpg" alt="Hero Image">
+    <div class="overlay">
+      <div class="text">Selamat Datang di Website Restoku</div>
     </div>
-
-
-
-    
-    <h1>Restaurant Apps Starter Project</h1>
-    <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
-    <p>
-      Jangan lupa untuk menggunakan salah satu gambar yang berada pada ./images/heros
-      sebagai background hero elemen.
-    </p>
-    <img src="./images/heros/hero-image_1.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_2.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_3.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_4.jpg" width="450" alt="" />
+  </div>
   
-
+  <div class="content" id="content">
+    <h1>Daftar Restoran</h1>
+    <div id="restaurantsList">
+    </div>
+  </div>
   
-
-
-  </body>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2024 - Restoku by Ardian Wahyu Saputra</p>
+    </div>
+  </footer>
+</body>
 </html>
