update v1 tinggal navbar

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Restoku</title>
   <meta name="viewport" content="width=device-width">
+  <link rel="icon" href="./images/heros/logo.png">
 </head>
 <body>
   <a href="#content" class="skip-to-content">Skip to Content</a>
